# mimc-halo2

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: mimc_cipher.rs  mimc_feistel_cipher.rs  mimc_feistel_hash.rs  mimc_hash.rs  primitives.rs
spec/: mimc-halo2.tex  mimc.bib
src/: lib.rs
src/mimc/: mimc_cipher.rs  mimc_hash.rs  mod.rs  primitives.rs  round_constants.rs
src/mimc_feistel/: mimc_feistel_cipher.rs  mimc_feistel_hash.rs  mod.rs  primitives.rs  round_constants.rs
